--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -51,4 +51,7 @@ bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 # Keep this at the very bottom
+if-shell "[ ! -d ~/.config/tmux/plugins/tpm ]" \
+    "run-shell 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm'"
+
 run '~/.config/tmux/plugins/tpm/tpm'
