--- a/dotfiles/.config/waybar/config.jsonc
+++ b/dotfiles/.config/waybar/config.jsonc
@@ -52,7 +52,7 @@
     // },
     "cpu": {
       "interval": 1,
-      "format": "  {usage:>2}%",
+      "format": " {usage:>2}%",
       "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
     },
     "memory": {
@@ -73,16 +73,17 @@
       "on-click": "pavucontrol"
     },
     "hyprland/window": {
-        "format": "{}",
+        // "format": "{title:.30}",
         "separate-outputs": true,
+        "max-length": 50,
         "icon": true,
-        "rewrite": {
-          "(^.{0,20}) - (.*)": "$1",
-          // $1 = trimmed_window_title
-          // $2 = removed_window_title_substring
-          // $3 = app_id
-          "(^.{0,20})(.*) - (.*)": "$1... - $3"
-        }
+        // "rewrite": {
+        //   "(^.{0,20}$)": "$1",
+        //   // $1 = trimmed_window_title
+        //   // $2 = removed_window_title_substring
+        //   // $3 = app_id
+        //   "(^.{0,20})(.*) - (.*)": "$1... - $3"
+        // }
     },
     "custom/power": {
       "tooltip": false,
@@ -140,16 +141,18 @@
       "spacing": 10
     },
     "hyprland/window": {
-        "format": "{}",
+        // "format": "{}",
+        "format": "{title:.30}",
         "separate-outputs": true,
+        "max-length": 50,
         "icon": true,
-        "rewrite": {
-          "(^.{0,20}) - (.*)": "$1",
-          // $1 = trimmed_window_title
-          // $2 = removed_window_title_substring
-          // $3 = app_id
-          "(^.{0,20})(.*) - (.*)": "$1... - $3"
-        }
+        // "rewrite": {
+        //   "(^.{0,20}) - (.*)": "$1",
+        //   // $1 = trimmed_window_title
+        //   // $2 = removed_window_title_substring
+        //   // $3 = app_id
+        //   "(^.{0,20})(.*) - (.*)": "$1... - $3"
+        // }
     },
     "custom/music": {
       "format": "  {}",
