--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -41,13 +41,15 @@ $browser=zen-browser
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
+exec-once = $terminal
 exec-once = nm-applet &
-exec-once = waybar & hyprpaper
-exec-once = hypridle -c ~/.config/hypr/hypridle.conf
+exec-once = waybar & hyprpaper &
+exec-once = hypridle -c ~/.config/hypr/hypridle.conf &
 # Make web browsers not weird
 exec-once = systemctl --user start hyprpolkitagent
-
+exec-once = blueman-applet &
+# Set mouse cursor
+exec-once = hyprctl setcursor macOS 24
 exec-once = hash dbus-update-activation-environment 2>/dev/null
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
@@ -65,8 +67,6 @@ env = HYPRCURSOR_SIZE,24
 ### LOOK AND FEEL ###
 #####################
 
-# Set mouse cursor
-exec-once = hyprctl setcursor macOS 24
 
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
@@ -204,10 +204,10 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
+# device {
+#     name = epic-mouse-v1
+#     sensitivity = -0.5
+# }
 
 
 ###################
@@ -300,10 +300,15 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
 workspace=1,monitor:HDMI-A-2
-# Example windowrule
+# Make the tray icons behave more like tray icons
+# Pavu Control
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = move 1497 61,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = move 1000 60,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 500 400,class:^(org.pulseaudio.pavucontrol)$
+# Blueman tray thingy
+windowrulev2 = float,class:^(blueman-manager)$
+windowrulev2 = move 1510 60,class:^(blueman-manager)$
+windowrulev2 = size 500 400,class:^(blueman-manager)$
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
 
