--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -225,6 +225,7 @@ bind = $mainMod, E, exec, $terminal -e "nvim"
 bind = $mainMod, W, exec, $browser
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
+bind = ALT, Space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, f, fullscreen, 0
