--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -173,6 +173,12 @@ misc {
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
+# Fix XWayland games
+xwayland {
+    enabled = true
+    force_zero_scaling = true
+}
+
 
 #############
 ### INPUT ###
