Update to new hyprland

--- a/dotfiles/.config/fontconfig/fonts.conf
+++ b/dotfiles/.config/fontconfig/fonts.conf
@@ -9,6 +9,7 @@
     <edit name="family" mode="prepend" binding="strong">
       <string>FiraCode Nerd Font</string>
       <string>JetBrainsMono Nerd Font</string>
+      <string>Apple Color Emoji</string>
     </edit>
   </match>
 
@@ -21,6 +22,7 @@
       <string>Inter Display</string>
       <string>Nimbus Sans L</string>
       <string>Noto Sans</string>
+      <string>Apple Color Emoji</string>
     </edit>
   </match>
 
@@ -33,6 +35,7 @@
       <string>Inter Display</string>
       <string>Nimbus Sans L</string>
       <string>Noto Sans</string>
+      <string>Apple Color Emoji</string>
     </edit>
   </match>
 
@@ -45,6 +48,7 @@
       <string>Nimbus Roman</string>
       <string>Times New Roman</string>
       <string>Georgia</string>
+      <string>Apple Color Emoji</string>
     </edit>
   </match>
 </fontconfig>
