--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -31,7 +31,7 @@ monitor=HDMI-A-2,2560x1440@144,0x0,1.25
 # Set programs that you use
 $terminal = ghostty
 $fileManager = thunar
-$menu = anyrun
+$menu = hyprlauncher
 $browser=zen-browser
 
 #################
@@ -48,6 +48,7 @@ exec-once = hypridle -c ~/.config/hypr/hypridle.conf &
 # Make web browsers not weird
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = blueman-applet &
+exec-once = tailscale systray &
 # Set mouse cursor
 exec-once = hyprctl setcursor macOS 24
 exec-once = hash dbus-update-activation-environment 2>/dev/null
@@ -170,7 +171,7 @@ master {
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 # Fix XWayland games
@@ -204,9 +205,9 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#     workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -237,7 +238,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, f, fullscreen, 0
 
 # Screenshot
-bind = $mainMod SHIFT, S, exec, windows_screenshot_tool
+bind = $mainMod SHIFT, S, exec, custom_screenshot_tool
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -307,17 +308,21 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
 workspace=1,monitor:HDMI-A-2
+windowrule = match:class ^(com.discordapp.Discord)$, workspace 5
+# windowrulev2 = workspace 5,class:^(com.discordapp.Discord)$
 # Make the tray icons behave more like tray icons
 # Pavu Control
-windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = move 1000 60,class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = size 500 400,class:^(org.pulseaudio.pavucontrol)$
+# windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
+# windowrulev2 = move 1000 60,class:^(org.pulseaudio.pavucontrol)$
+# windowrulev2 = size 500 400,class:^(org.pulseaudio.pavucontrol)$
 # Blueman tray thingy
-windowrulev2 = float,class:^(blueman-manager)$
-windowrulev2 = move 1510 60,class:^(blueman-manager)$
-windowrulev2 = size 500 400,class:^(blueman-manager)$
+# windowrulev2 = float,class:^(blueman-manager)$
+# windowrulev2 = move 1510 60,class:^(blueman-manager)$
+# windowrulev2 = size 500 400,class:^(blueman-manager)$
+windowrule = match:class ^(org.pulseaudio.pavucontrol)$, float on, move 3*(monitor_w)/4 monitor_h*0.05, size 500 400
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+# windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = match:xwayland true, no_initial_focus on
