--- a/dotfiles/.config/hypr/hyprpaper.conf
+++ b/dotfiles/.config/hypr/hyprpaper.conf
@@ -1,3 +1,9 @@
-preload = /home/adam/.config/hypr/waterfall-background.jpeg
-wallpaper = , /home/adam/.config/hypr/waterfall-background.jpeg
+# preload = /home/adam/.config/hypr/waterfall-background.jpeg
+# wallpaper = , /home/adam/.config/hypr/waterfall-background.jpeg
 
+
+wallpaper {
+    monitor =
+    path = /home/adam/.config/hypr/waterfall-background.jpeg
+    fit_mode = cover
+}
