--- a/dotfiles/.config/fastfetch/config.jsonc
+++ b/dotfiles/.config/fastfetch/config.jsonc
@@ -1,5 +1,12 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+    "logo": {
+        "source": "arch",
+        "color": {
+            // "1": "red",
+            // "2": "yellow",
+        }
+    },
     "display": {
         "color": {
             "separator": "blue"
