--- a/dotfiles/.config/waybar/config.jsonc
+++ b/dotfiles/.config/waybar/config.jsonc
@@ -44,7 +44,7 @@
     "clock": {
       "timezone": "America/New_York",
       "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-      "format": "{:%a %b %d %Y %I:%M %p}",
+      "format": "{:%b %d %Y %I:%M %p}",
       "interval": 1
     },
     // "network": {
@@ -174,7 +174,7 @@
     "clock": {
       "timezone": "America/New_York",
       "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-      "format": "{:%a %b %d %Y %I:%M %p}",
+      "format": "{:%b %d %Y %I:%M %p}",
       "interval": 1
     },
     "network": {
